chrome/browser/ui/cocoa/global_error_bubble_controller.h
@@ -13,6 +13,7 @@
 #import "chrome/browser/ui/cocoa/base_bubble_controller.h"
 
 class Browser;
+class GlobalErrorBubbleViewBase;
 class GlobalErrorWithStandardBubble;
 @class GTMUILocalizerAndLayoutTweaker;
 @class GTMWidthBasedTweaker;
@@ -44,5 +45,12 @@ class Bridge;
 - (void)close;
 
 @end
+
+// Helper to show a toolkit-views global error bubble. Implemented in a views-
+// specific file.
+GlobalErrorBubbleViewBase* ShowViewsGlobalErrorBubbleOnCocoaBrowser(
+    NSPoint anchor,
+    Browser* browser,
+    const base::WeakPtr<GlobalErrorWithStandardBubble>& error);
 
 #endif  // CHROME_BROWSER_UI_COCOA_GLOBAL_ERROR_BUBBLE_CONTROLLER_H_
